## This library depends on libhashtbl.
#  Maybe it is possible to find a cleaner way to do that...
## Process this file with automake to produce Makefile.in

DEFAULT_INCLUDES= -I$(top_srcdir)/include -I$(top_builddir)

AM_CFLAGS = -Wstrict-prototypes -Wall

noinst_LTLIBRARIES = libconfig.la

libconfig_la_SOURCES = config.c
